--- a/recitewords/templates/home.html
+++ b/recitewords/templates/home.html
@@ -1,62 +1,173 @@
 {% extends "base.html" %} {% block content %}
-<!-- banner -->
-<div class="banner">
-    <div class="container">
-        <div class="header-nav">
-            <nav class="navbar navbar-default">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <div class="logo">
-                        <a class="navbar-brand" href="{% url 'home' %}">背单词
-                        </a>
-                    </div>
+<section id="home">
+    <!-- Section title -->
+    <h1 class="sr-only">Home</h1>
+    <div id="carousel-hero" class="carousel slide" data-ride="carousel">
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active" id="slide-1">
+                <div class="overlay"></div>
+                <div class="carousel-caption">
+                    {% if request.user.is_authenticated %}
+                    <span class="h1">今日任务 - {% if request.user.daily_task_amount >= request.user.remained_daily_task_amount %} {{ request.user.daily_task_amount }} 
+                        {% else %} {{ request.user.remained_daily_task_amount }} {% endif %} - 尚未学习 - {{ request.user.remained_daily_task_amount }}
+                    </span>
+                    <p></p>
+                    <a href="{% url 'recite_word' %}" class="btn btn-default green-white">开始学习</a>
+                    {% else %}
+                    <span class="h1">您尚未登录
+                        </span>
+                        <p></p>
+                    {% endif %}
+                </div>
+            </div>
+            <!-- /.item -->
+            <div class="item" id="slide-2">
+                <div class="overlay"></div>
+                <div class="carousel-caption">
+                    {% if request.user.is_authenticated %}
+                    <span class="h1">正在学习 - {{ request.user.current_wordbook.name }}</span>
+                    <p></p>
+                    <a href="{% url 'wordbook_list' %}" class="btn btn-default green-white">切换单词书</a>
+                    {% else %}
+                    <span class="h1">您尚未登录
+                        </span>
+                        <p></p>
+                    {% endif %}
+                </div>
+            </div>
+            <!-- /.item -->
+            <div class="item" id="slide-3">
+                <div class="overlay"></div>
+                <div class="carousel-caption">
+                    {% if request.user.is_authenticated %}
+                    <span class="h1">检验一下学习成果?</span>
+                    <p></p>
+                    <a href="{% url 'exam_set' %}" class="btn btn-default green-white">进入测试</a>
+                    {% else %}
+                    <span class="h1">您尚未登录
+                        </span>
+                        <p></p>
+                    {% endif %}
+                </div>
+            </div>
+            <!-- /.item -->
+        </div>
+        <!-- /.carousel-inner -->
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-hero" role="button" data-slide="prev">
+            <span class="ico ico-arrow_left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-hero" role="button" data-slide="next">
+            <span class="ico ico-arrow_right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- /.carousel -->
+</section>
+
+<section id="services">
+
+        <!-- Section title -->
+        <h1 class="sr-only">Services</h1>
+
+        <div class="container">
+
+            <div class="row">
+                
+                <div class="col-md-4">
+
+                    <div class="punchbox">
+                        
+                        <h2 class="punchline">
+                            <span>What we do</span>
+                            <span>best</span>
+                            <span>see it for yourself</span>
+                        </h2>
+
+                    </div> <!-- /.punchbox -->
+                    
                 </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="{% url 'home' %}">首页</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'recite_word' %}">背单词</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'wordbook_list' %}">单词书</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'setting' %}">设置</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">考试</a><!--TODO-->
-                        </li>
-                    </ul>
-                    <div class="search">
-                        <form method="POST" action='{% url 'search_word' %}'>
-                            {% csrf_token %}
-                            <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
-                            <input type="text" name="searching-word" value="Search Here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search Here...';}"
-                                required="">
-                        </form>
-                    </div>
+                <div class="col-md-4">
+                    
+                    <div class="service">
+
+                        <h4>Photography</h4>
+
+                        <p>Nec feugiat ut neque odio quo, interdum, quis elit varius.</p>
+
+                        <a href="#" class="service-link">See projects</a>
+
+                    </div> <!-- /.service -->
+
                 </div>
-                <!-- /.navbar-collapse -->
-            </nav>
-        </div>
-        <div class="banner-info">
-            <h1>今日任务 - {{ request.user.daily_task_amount }} - 尚未完成 - {{ request.user.remained_daily_task_amount }}</h1>
-            <p></p>
-            <!--<div class="more m1">-->
-                <a class="btn start-learn-btn" href="{% url "recite_word" %}">开始学习</a>
-            <!--</div>-->
-        </div>
-    </div>
-</div>
-<!-- //banner -->
+
+                <div class="col-md-4">
+                    
+                    <div class="service">
+
+                        <h4>Graphic design</h4>
+
+                        <p>Nec feugiat ut neque odio quo, interdum, quis elit varius.</p>
+
+                        <a href="#" class="service-link">See projects</a>
+
+                    </div> <!-- /.service -->
+
+                </div>
+
+            </div> <!-- /.row -->
+
+            <div class="row">
+                
+                <div class="col-md-4">
+                    
+                    <div class="service">
+
+                        <h4>App development</h4>
+
+                        <p>Nec feugiat ut neque odio quo, interdum, quis elit varius.</p>
+
+                        <a href="#" class="service-link">See projects</a>
+
+                    </div> <!-- /.service -->
+
+                </div>
+
+                <div class="col-md-4">
+                    
+                    <div class="service">
+
+                        <h4>Programming</h4>
+
+                        <p>Nec feugiat ut neque odio quo, interdum, quis elit varius.</p>
+
+                        <a href="#" class="service-link">See projects</a>
+
+                    </div> <!-- /.service -->
+
+                </div>
+
+                <div class="col-md-4">
+                    
+                    <div class="service">
+
+                        <h4>Web coding</h4>
+
+                        <p>Nec feugiat ut neque odio quo, interdum, quis elit varius.</p>
+
+                        <a href="#" class="service-link">See projects</a>
+
+                    </div> <!-- /.service -->
+
+                </div>
+
+            </div> <!-- /.row -->
+
+        </div> <!-- /.container -->
+        
+    </section>
+
 {% endblock content %}
