--- a/recitewords/templates/base.html
+++ b/recitewords/templates/base.html
@@ -331,57 +331,7 @@
         </div>
     </div>
     {% block content %} {% endblock content %}
-    <div class="section black contact-details green-icons">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 text-center">
-                    <div class="services-box-3">
-                        <i class="fa fa-phone"></i>
-                        <div class="content">
-                            <p>
-                                Phone</p>
-                            <h3>
-                                +1 555 666 9999</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 text-center">
-                    <div class="services-box-3">
-                        <i class="fa fa-envelope"></i>
-                        <div class="content">
-                            <p>
-                                E-mail</p>
-                            <h3>
-                                letstalk@thempleite.com</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 text-center">
-                    <div class="services-box-3">
-                        <i class="fa fa-map-marker "></i>
-                        <div class="content">
-                            <p>
-                                Postal</p>
-                            <h3>
-                                32-Grey Suite, NY</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 text-center">
-                    <div class="services-box-3">
-                        <i class="fa fa-pinterest-square"></i>
-                        <div class="content">
-                            <p>
-                                Pinterest</p>
-                            <h3>
-                                pinterest.com/frittt</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="section white footer">
+    <div class="section black footer" id="footer">
         <div class="container">
             <div class="p-t-30 p-b-50">
                 <div class="row">
