--- a/recitewords/templates/exam.html
+++ b/recitewords/templates/exam.html
@@ -33,8 +33,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
 <script type="text/javascript" src="/static/assets/plugins/parrallax/js/jquery.parallax-1.1.3.js"></script>
 <script src="/static/assets/plugins/onescroll/js/classie.js"></script>
 <script src="/static/assets/plugins/onescroll/js/cbpScroller.js"></script>
@@ -128,14 +126,18 @@
     });
 
     $(window).ready(function () {
-        $("#recite-word-wrapper").css("margin-top", $(".navbar").height());
-        console.log($("#recite-word-wrapper").css("margin-top"));
-        console.log($(".navbar").height());
+        var nav_height = $(".navbar").height();
+        var footer_height = $("#footer").height();
+        $("#recite-word-wrapper").css("margin-top", nav_height);
+        $("#recite-word-wrapper").css("min-height", window.innerHeight - nav_height - footer_height);
+        $("#word-spelling").css("margin-top", (window.innerHeight - nav_height) * 0.2)
     });
 
     $(window).resize(function () {
-        $("#recite-word-wrapper").css("margin-top", $(".navbar").height());
-        console.log($("#recite-word-wrapper").css("margin-top"));
-        console.log($(".navbar").height());
+        var nav_height = $(".navbar").height();
+        var footer_height = $("#footer").height();
+        $("#recite-word-wrapper").css("margin-top", nav_height);
+        $("#recite-word-wrapper").css("min-height", window.innerHeight - nav_height - footer_height);
+        $("#word-spelling").css("margin-top", (window.innerHeight - nav_height) * 0.2)
     });
 </script> {% endblock content %}
