--- a/recitewords/templates/recite_word.html
+++ b/recitewords/templates/recite_word.html
@@ -3,6 +3,8 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <h1 class="semi-bold text-center" id="word-spelling">{{ word.word.word.spelling }}</h2>
+                <!--<div style="display: flex; display: -webkit-flex; justify-content:center;"><div class="heart"></div></div>-->
+                <div style="display: flex; display: -webkit-flex; justify-content:center; align-items:center;"><span class="glyphicon glyphicon-heart" aria-hidden="true" id="favor" style="color: #f00;font-size: 26px; "></span>   <h5>添加收藏</h5></div>
                 <h4 class="normal text-center" style="visibility: hidden;" id="word-meaning">{{ word.word.word.meaning }}</h3>
                     <div id="btn-list" style="display: flex; display: -webkit-flex; justify-content:center;">
                         <a class="btn btn-info btn-cons m-t-10" id="know-btn">认识</a>
@@ -33,10 +35,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-
-
 <script type="text/javascript" src="/static/assets/plugins/parrallax/js/jquery.parallax-1.1.3.js"></script>
 <script src="/static/assets/plugins/onescroll/js/classie.js"></script>
 <script src="/static/assets/plugins/onescroll/js/cbpScroller.js"></script>
@@ -146,14 +144,18 @@
     });
 
     $(window).ready(function () {
-        $("#recite-word-wrapper").css("margin-top", $(".navbar").height());
-        console.log($("#recite-word-wrapper").css("margin-top"));
-        console.log($(".navbar").height());
+        var nav_height = $(".navbar").height();
+        var footer_height = $("#footer").height();
+        $("#recite-word-wrapper").css("margin-top", nav_height);
+        $("#recite-word-wrapper").css("min-height", window.innerHeight - nav_height - footer_height);
+        $("#word-spelling").css("margin-top", (window.innerHeight - nav_height) * 0.2)
     });
 
     $(window).resize(function () {
-        $("#recite-word-wrapper").css("margin-top", $(".navbar").height());
-        console.log($("#recite-word-wrapper").css("margin-top"));
-        console.log($(".navbar").height());
+        var nav_height = $(".navbar").height();
+        var footer_height = $("#footer").height();
+        $("#recite-word-wrapper").css("margin-top", nav_height);
+        $("#recite-word-wrapper").css("min-height", window.innerHeight - nav_height - footer_height);
+        $("#word-spelling").css("margin-top", (window.innerHeight - nav_height) * 0.2)
     });
 </script> {% endblock content %}
